--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,10 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   font-size: 16px;
-  background: #f5f5f5;
+  /*background: #f5f5f5;*/
+  background: url(https://cdn2.iconfinder.com/data/icons/advertisement-marketing/512/global_connections-512.png);
+  background-repeat: no-repeat;
+  background-size: 200px 200px;
   color: #333;
 }
 
