--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@ body {
   font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   font-size: 16px;
-  /*background: #f5f5f5;*/
-  background: url(https://cdn2.iconfinder.com/data/icons/advertisement-marketing/512/global_connections-512.png);
+  background: #f5f5f5;
+  background: url(http://www.gcpr.net/wp-content/uploads/2013/02/iconworldmap3.jpg);
   background-repeat: no-repeat;
-  background-size: 200px 200px;
+  background-size:25em;
   color: #333;
 }
 
